# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1416 2010-09-22 13:11:00 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --
3.0.0 beta4 2010-09-??
 - 2010-09-22 Fixed bug#5956 - Arrows to expand/collapse Support Module details point
    in the wrong direction.
 - 2010-09-22 Fixed bug#5976 - Admin Notification (event) text box runs outside the screen.
 - 2010-09-22 Fixed bug#5959 - Agent gets "Invalid argument" JavaScript Error in Ticket Zoom.
 - 2010-09-21 Fixed bug#5970 - Wrong orientation of expand / collapse arrows.
 - 2010-09-20 Fixed bug#5707 - Web Installer Mail Configuration does not list all SMTP backends/options.
 - 2010-09-15 Fixed bug#5948 - Address Book will not open for ticket forwarding.
 - 2010-09-15 Fixed bug#5943 - Customer Link behaviour in ZoomView.
 - 2010-09-13 Fixed bug#5649 - Changing owner from L view opens in same tab instead of popup.
 - 2010-09-13 Fixed bug#5929 - CheckURLHash();get's called every 500ms - generates
    not needed load.

3.0.0 beta3 2010-09-13
 - 2010-09-10 Fixed bug#5525 - If submit button is clicked repeatedly two or more tickets
    can be created instead of one.
 - 2010-09-10 Fixed bug#5923 - Can't set pending date to today but few hours later.
 - 2010-09-10 Fixed bug#5913 - Time field of adminlog has to be bigger.
 - 2010-09-09 Fixed bug#5916 - Used search fields are not removed from the
    available search fields list.
 - 2010-09-09 Fixed bug#5866 - AutoLoginCreation does not work.
 - 2010-09-09 Fixed bug#5674 - Attachment name and size are not displayed in
    attachment column in ticket zoom article table.
 - 2010-09-09 Fixed bug#5902 - Long text overflow in infobox is not cut or wrapped.
 - 2010-09-09 Fixed bug#5900 - ~otrs/bin/otrs.DeleteCache.pl should also delete the